--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
 h1 {
-    color: rgb(82, 47, 2);
+    color: rgb(252, 158, 231);
     }
+h2 {
+    color: rgb(247, 198, 152); 
+    }
+h3 {
+    color: rgb(238, 84, 225);
+}
